Improve comments: add comment overlay, avoid layout shifts

--- a/styles.css
+++ b/styles.css
@@ -272,6 +272,7 @@ label {
 
 .indicator-subcontainer {
     flex-grow: 1;
+    position: relative;
 }
 
 .indicator-container .indicator-subcontainer div {
@@ -280,6 +281,26 @@ label {
 
 .indicator-container .indicator-subcontainer div p {
     align-items: center;
+}
+
+.comment-box {
+    background-color: var(--dark-color);
+}
+
+.comment-box p, .comment-box input {
+    margin: 0;
+}
+
+.comment-box p {
+    color: var(--light-color);
+    margin-bottom: 1rem;
+}
+
+.comment-box input {
+    color: var(--light-color);
+    background-color: transparent;
+    border: 1px solid var(--light-color);
+    border-radius: 8px;
 }
 
 .warning-indicator {
